Agregue la conexion a la base de datos, ya funciona